--- a/spec/common_rbac.api.yaml
+++ b/spec/common_rbac.api.yaml
@@ -1,15 +1,25 @@
 paths:
-  /dummy/dummy:
-    get:
+  /rbac/instance:
+    post:
       tags:
-        - dummy
-      #  Its not possible to make a ref unfortunately (https://github.com/OpenAPITools/openapi-generator/issues/11151)
-      summary: "Dummy path to fix omission in openapi generation when a type is not included."
-      operationId: dummy
+        - rbac
+        - instance
+      summary: "Create RBAC model"
+      operationId: ingestInstanceRBAC
       description: ""
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateInstanceRBACRequest"
       responses:
-        "400":
-          $ref: "#/components/responses/stackElementNotFound"
+        "201":
+          description: "Payload accepted"
+        "403":
+          description: "Forbidden"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
   schemas:
     StackElementNotFound:
@@ -38,7 +48,49 @@ components:
         - objectType
         - objectId
         - message
-
+    CreateInstanceRBACRequest:
+      type: object
+      description: "CreateInstanceRBACRequest holds the a snapshot of data or individual updates or RBAC data"
+      properties:
+        collection_timestamp:
+          type: integer
+          format: int64
+          description: "Timestamp where the data was collected by the RBAC Agent"
+        cluster:
+          type: string
+          description: "Cluster name which identifies the scope of the RBAC data"
+        start_snapshot:
+          type: object
+          schema:
+            $ref: "#/components/schemas/StartSnapshot"
+        stop_snapshot:
+          type: object
+          schema:
+            $ref: "#/components/schemas/StopSnapshot"
+        rbac_data:
+          type: array
+          items:
+            $ref: "#/components/schemas/RbacData"
+    StartSnapshot:
+      type: object
+      description: "Object that signals that the RBAC data belongs to a new Snapshot"
+      properties:
+        repeat_interval_s:
+          type: int
+          description: "Number of seconds when the RBAC Agent will send the following snapshot. Heartbeat of the Agent"
+    StopSnapshot:
+      type: object
+      description: "Object that signals that an open Snapshot needs to be closed after ingesting the RBAC data"
+    RbacData:
+      discriminator:
+        propertyName: kind
+      oneOf:
+        - $ref: "#/components/schemas/ClusterRole"
+        - $ref: "#/components/schemas/Role"
+        - $ref: "#/components/schemas/ClusterRoleBinding"
+        - $ref: "#/components/schemas/RoleBinding"
+      required:
+        - kind
     PolicyRule:
       type: object
       description: "PolicyRule holds information that describes a policy rule."
