--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ openapi-validate:
   script:
     - nix develop -c openapi-generator-cli validate -i spec/openapi.yaml
     - nix develop -c openapi-generator-cli validate -i spec/openapi_admin.yaml
+    - nix develop -c openapi-generator-cli validate -i spec/openapi_receiver.yaml
     - nix develop -c openapi-generator-cli validate -i spec_webhook/openapi.yaml
 
 openapi-lint:
@@ -26,6 +27,7 @@ openapi-lint:
   script:
     - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec/openapi.yaml
     - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec/openapi_admin.yaml
+    - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec/openapi_receiver.yaml
     - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec_webhook/openapi.yaml
 
 publish-docs:
