--- a/spec/common_rbac.api.yaml
+++ b/spec/common_rbac.api.yaml
@@ -6,7 +6,7 @@ paths:
         - instance
       summary: "Create RBAC model"
       operationId: ingestInstanceRBAC
-      description: ""
+      description: "Ingest RBAC data snapshots to build a scoped authorization model for data access for the server API"
       requestBody:
         required: true
         content:
@@ -48,6 +48,7 @@ components:
         - objectType
         - objectId
         - message
+
     CreateInstanceRBACRequest:
       type: object
       description: "CreateInstanceRBACRequest holds the a snapshot of data or individual updates or RBAC data"
@@ -60,27 +61,26 @@ components:
           type: string
           description: "Cluster name which identifies the scope of the RBAC data"
         start_snapshot:
-          type: object
-          schema:
-            $ref: "#/components/schemas/StartSnapshot"
+          $ref: "#/components/schemas/StartSnapshot"
         stop_snapshot:
-          type: object
-          schema:
-            $ref: "#/components/schemas/StopSnapshot"
+          $ref: "#/components/schemas/StopSnapshot"
         rbac_data:
           type: array
           items:
             $ref: "#/components/schemas/RbacData"
+
     StartSnapshot:
       type: object
       description: "Object that signals that the RBAC data belongs to a new Snapshot"
       properties:
         repeat_interval_s:
-          type: int
+          type: integer
           description: "Number of seconds when the RBAC Agent will send the following snapshot. Heartbeat of the Agent"
+
     StopSnapshot:
       type: object
       description: "Object that signals that an open Snapshot needs to be closed after ingesting the RBAC data"
+
     RbacData:
       discriminator:
         propertyName: kind
@@ -91,6 +91,7 @@ components:
         - $ref: "#/components/schemas/RoleBinding"
       required:
         - kind
+
     PolicyRule:
       type: object
       description: "PolicyRule holds information that describes a policy rule."
@@ -249,9 +250,6 @@ components:
         fieldsType:
           description: "FieldsType is the discriminator for the different fields format and version. There is currently only one possible value: \"FieldsV1\""
           type: string
-        fieldsV1:
-          $ref: "#/components/schemas/FieldsV1"
-          description: "FieldsV1 holds the first JSON version format as described in the \"FieldsV1\" type."
         manager:
           description: "Manager is an identifier of the workflow managing these fields."
           type: string
@@ -324,15 +322,6 @@ components:
         uid:
           type: string
           description: "Unique identifier for this object. Populated by the system."
-      Time:
-        type: string
-        format: date-time
-      ManagedFieldsEntry:
-        type: object
-        properties: { }
-      OwnerReference:
-        type: object
-        properties: { }
 
     AggregationRule:
       description: "AggregationRule describes how to locate ClusterRoles to aggregate into the ClusterRole."
