STAC-22313: Mark required field for the payload

--- a/spec/common_rbac.api.yaml
+++ b/spec/common_rbac.api.yaml
@@ -71,6 +71,10 @@ components:
           items:
             description: "UID of the RBAC object."
             type: string
+      required:
+        - collection_timestamp
+        - cluster
+        - rbac_data
 
     StartSnapshot:
       type: object
