--- a/spec/common_rbac.api.yaml
+++ b/spec/common_rbac.api.yaml
@@ -1,8 +1,7 @@
 paths:
-  /rbac/instance:
+  /stsAgent/rbac/instance:
     post:
       tags:
-        - rbac
         - instance
       summary: "Create instance RBAC objects"
       operationId: ingestInstanceRBAC
@@ -22,10 +21,9 @@ paths:
           description: "Forbidden"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
-  /rbac/scope:
+  /stsAgent/rbac/scope:
     post:
       tags:
-        - rbac
         - scope
       summary: "Create scope RBAC objects"
       operationId: ingestScopeRBAC
@@ -216,7 +214,6 @@ components:
             type: string
       required:
         - verbs
-
     Subject:
       type: object
       description: "Subject contains a reference to the object or user identities a role binding applies to."
@@ -236,7 +233,6 @@ components:
       required:
         - kind
         - name
-
     RoleRef:
       description: "RoleRef contains information that points to the role being used"
       type: object
@@ -254,7 +250,6 @@ components:
         - apiGroup
         - kind
         - name
-
     LabelSelector:
       description: "A label selector is a label query over a set of resources. The result of matchLabels and matchExpressions are ANDed. An empty label selector matches all objects. A null label selector matches no objects."
       type: object
@@ -269,13 +264,9 @@ components:
           type: object
           additionalProperties:
             type: string
-
     LabelSelectorRequirement:
       description: "A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values."
       type: object
-      required:
-        - key
-        - operator
       properties:
         key:
           description: "key is the label key that the selector applies to."
@@ -288,18 +279,21 @@ components:
           type: array
           items:
             type: string
-
+      required:
+        - key
+        - operator
     OwnerReference:
       description: "OwnerReference contains enough information to let you identify an owning object. An owning object must be in the same namespace as the dependent, or be cluster-scoped, so there is no namespace field."
       type: object
-      required:
-        - apiVersion
-        - kind
-        - name
-        - uid
       properties:
-        apiVersion:
-          description: "API version of the referent."
+        uid:
+          description: "UID of the referent."
+          type: string
+        name:
+          description: "Name of the referent."
+          type: string
+        kind:
+          description: "Kind of the referent."
           type: string
         blockOwnerDeletion:
           description: "If true, AND if the owner has the 'foregroundDeletion' finalizer, then the owner cannot be deleted from the key-value store until this reference is removed."
@@ -307,21 +301,14 @@ components:
         controller:
           description: "If true, this reference points to the managing controller."
           type: boolean
-        kind:
-          description: "Kind of the referent."
-          type: string
-        name:
-          description: "Name of the referent."
-          type: string
-        uid:
-          description: "UID of the referent."
-          type: string
-
+      required:
+        - name
+        - uid
+        - kind
     Time:
       description: "Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON."
       type: string
       format: date-time
-
     ManagedFieldsEntry:
       description: "ManagedFieldsEntry is a workflow-id, a FieldSet and the group version of the resource that the fieldset applies to."
       type: object
@@ -344,11 +331,16 @@ components:
         time:
           $ref: "#/components/schemas/Time"
           description: "Time is the timestamp of when the ManagedFields entry was added. The timestamp will also be updated if a field is added, the manager changes any of the owned fields value or removes a field. The timestamp does not update when a field is removed from the entry because another manager took it over."
-
     ObjectMeta:
       type: object
       description: "ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."
       properties:
+        uid:
+          type: string
+          description: "Unique identifier for this object. Populated by the system."
+        name:
+          type: string
+          description: "Unique name within a namespace. Required for resource creation."
         annotations:
           type: object
           additionalProperties:
@@ -384,9 +376,6 @@ components:
           items:
             $ref: "#/components/schemas/ManagedFieldsEntry"
           description: "Maps workflow-id and version to the set of fields managed by that workflow."
-        name:
-          type: string
-          description: "Unique name within a namespace. Required for resource creation."
         namespace:
           type: string
           description: "Defines the space within which each name must be unique."
@@ -398,13 +387,9 @@ components:
         resourceVersion:
           type: string
           description: "Opaque value representing the internal version of this object."
-        selfLink:
-          type: string
-          description: "Deprecated: selfLink is no longer populated."
-        uid:
-          type: string
-          description: "Unique identifier for this object. Populated by the system."
-
+      required:
+        - uid
+        - name
     AggregationRule:
       description: "AggregationRule describes how to locate ClusterRoles to aggregate into the ClusterRole."
       type: object
@@ -414,38 +399,31 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/LabelSelector"
-
     ClusterRole:
       description: "ClusterRole is a cluster level, logical grouping of PolicyRules that can be referenced as a unit by a RoleBinding or ClusterRoleBinding."
       type: object
       properties:
-        aggregationRule:
-          $ref: "#/components/schemas/AggregationRule"
-          description: "AggregationRule is an optional field that describes how to build the Rules for this ClusterRole. If AggregationRule is set, then the Rules are controller-managed and direct changes to Rules will be overwritten by the controller."
-        apiVersion:
-          description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value and may reject unrecognized values."
-          type: string
         kind:
           description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated."
           type: string
         metadata:
           $ref: "#/components/schemas/ObjectMeta"
           description: "Standard object's metadata."
+        aggregationRule:
+          $ref: "#/components/schemas/AggregationRule"
+          description: "AggregationRule is an optional field that describes how to build the Rules for this ClusterRole. If AggregationRule is set, then the Rules are controller-managed and direct changes to Rules will be overwritten by the controller."
         rules:
           description: "Rules holds all the PolicyRules for this ClusterRole."
           type: array
           items:
             $ref: "#/components/schemas/PolicyRule"
-
+      required:
+        - kind
+        - metadata
     ClusterRoleBinding:
       description: "ClusterRoleBinding references a ClusterRole but does not contain it. It can reference a ClusterRole in the global namespace and adds subject information via the Subject field."
       type: object
-      required:
-        - roleRef
       properties:
-        apiVersion:
-          description: "APIVersion defines the versioned schema of this representation of an object."
-          type: string
         kind:
           description: "Kind is a string value representing the REST resource this object represents."
           type: string
@@ -460,14 +438,14 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Subject"
-
+      required:
+        - kind
+        - metadata
+        - roleRef
     Role:
       description: "Role is a namespaced, logical grouping of PolicyRules that can be referenced as a unit by a RoleBinding."
       type: object
       properties:
-        apiVersion:
-          description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values."
-          type: string
         kind:
           description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated."
           type: string
@@ -479,16 +457,13 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/PolicyRule"
-
+      required:
+        - kind
+        - metadata
     RoleBinding:
       description: "RoleBinding references a Role in the same namespace or a ClusterRole in the global namespace. It adds who information via Subjects and namespace information by which namespace it exists in."
       type: object
-      required:
-        - roleRef
       properties:
-        apiVersion:
-          description: "APIVersion defines the versioned schema of this representation of an object."
-          type: string
         kind:
           description: "Kind is a string value representing the REST resource this object represents."
           type: string
@@ -503,3 +478,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Subject"
+      required:
+        - kind
+        - metadata
+        - roleRef
