STAC-22315: Make policyRule fields non optional but the resourceNames

--- a/spec/common_rbac.api.yaml
+++ b/spec/common_rbac.api.yaml
@@ -187,6 +187,9 @@ components:
           items:
             type: string
       required:
+        - apiGroups
+        - nonResourceURLs
+        - resources
         - verbs
     Subject:
       type: object
