--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -257,6 +257,10 @@ components:
           type: string
         iconbase64:
           type: string
+        relatedResources:
+          type: array
+          items:
+            $ref: "component_types.api.yaml#/components/schemas/ComponentTypeRelatedResources"
         namespace:
           type: string
         cluster:
@@ -266,6 +270,7 @@ components:
         - identifier
         - name
         - type
+        - relatedResources
     MonitorCheckStatusRelatedFailuresTopology:
       properties:
         distance:
